[package]
name = "arxiv_recent"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arxiv-rs = "0.1.5"
tokio = { version = "1.3.0", features = ["full"] }
anyhow = "1.0.32"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
